--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animation</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/Pop-up-Animation/CSS/style.css">
 </head>
 <body>
     <button id="open-popup-button">Show Modal</button>
@@ -12,9 +12,9 @@
     <!-- Pop-up container -->
     <div id="popup-container">
         <div class="function-button">
-            <img class="return-icon" src="/icons/return-icon.svg" alt="Return icon">
+            <img class="return-icon" src="/Pop-up-Animation/icons/return-icon.svg" alt="Return icon">
 
-            <img id="close-button" class="close-icon" src="/icons/x-icon.svg" alt="Close icon">
+            <img id="close-button" class="close-icon" src="/Pop-up-Animation/icons/x-icon.svg" alt="Close icon">
         </div>
 
         <div class="popup-content">
@@ -37,6 +37,6 @@
     </div>
 
     <!-- Script -->
-    <script src="/JS/index.js"></script>
+    <script src="/Pop-up-Animation/JS/index.js"></script>
 </body>
 </html>
